--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Tue Apr  8 03:08:49 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstapp.c (bst_update_can_operate): allow any kind of
+	widget being passed in. process updates at G_PRIORITY_DEFAULT,
+	to coalesce across resizes and redraws.
+
+	* beast-gtk/bstitemview.c: queue operation state updates when we
+	got state change notifications from BSE.
+
 Sun Apr  6 20:04:29 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/gxk/gxktexttools.c: add current vertical scroll position
