--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 FIXMES:
 - fix button sensitivity
+- fix gsl wave osc
 - fix BSE mime logo to say BSE instead of BEAST
 - install bsw/* into bse/.
 - remove SFI(signal): spurious unknown signal "release" on proxy (23)
