--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Apr 14 00:11:43 2003  Tim Janik  <timj@gtk.org>
+
+	* released beast-0.5.1.tar.gz.
+
 Sun Apr 13 22:56:09 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstxxutils.{h|cc}: added a c++ object file so the main
