--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,10 @@
+Wed Apr 16 19:24:12 2003  Tim Janik  <timj@gtk.org>
+
+	* bsewaverepo.proc (load_file): fix usage of g_basename().
+
+	* bseobject.c (bse_object_type_register): added missing cast.
+	* bseprocedure.c (bse_procedure_type_register): same here.
+
 Sun Apr 13 23:48:07 2003  Tim Janik  <timj@gtk.org>
 
 	* bsepcmdevice-oss.c (bse_pcm_device_oss_open): fallback to check
