--- a/TODO
+++ b/TODO
@@ -1,4 +1,14 @@
 FIXMES:
+- check whether bse/icons/Makefile.icons is included in dist tarball
+- check whether plugins/icons/Makefile.icons is included in dist tarball
+- check whether beast-0.5.1.orig/plugins/Makefile.plugins is included in dist tarball
+- check whether bse/icons/Makefile.icons is included in dist tarball
+- check whether bse/icons/Makefile.icons is included in dist tarball
+- check whether bse/icons/Makefile.icons is included in dist tarball
+- fix synth column editing in track list
+- fix main menubar which contains a lot of wrongly enabled menu items
+- register category IDs via ID mechanism
+- register drivers with categories
 - fix gsl wave osc
 - install bsw/* into bse/.
 - remove SFI(signal): spurious unknown signal "release" on proxy (23)
