announce patch-beast-0.5.0-0.5.1.fixed.gz.
Sun Apr 20 21:10:12 2003  Tim Janik  <timj@gtk.org>

        * docs/site-news.texi: announce patch-beast-0.5.0-0.5.1.fixed.gz.

Sun Apr 20 12:11:58 2003  Alper Ersoy  <dirt@gtk.org>

        * docs/generated/css/default.css: added entries used by sitefiles.pl.

svn path=/trunk/; revision=1039

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Sun Apr 20 21:10:12 2003  Tim Janik  <timj@gtk.org>
+
+	* docs/site-news.texi: announce patch-beast-0.5.0-0.5.1.fixed.gz.
+
+Sun Apr 20 12:11:58 2003  Alper Ersoy  <dirt@gtk.org>
+
+	* docs/generated/css/default.css: added entries used by sitefiles.pl.
+
 Fri Apr 18 18:40:41 2003  Tim Janik  <timj@gtk.org>
 
 	* docs/site-oldnews.texi: 
