--- a/docs/site-oldnews.texi
+++ b/docs/site-oldnews.texi
@@ -11,6 +11,23 @@
 @unnumbered What Was New? (Ancient News)
 
 
+@newsTitle{Thursday 13 Mar 2003, New Development Release}
+
+BEAST/BSE version 0.5.0 is available in the
+@uref{beast-doc://download,,download section}, here is the
+@uref{http://www.gnomedesktop.org/article.php?sid=993,,FootNotes announcement}.
+
+This new development series of BEAST comes with a lot of
+the internals redone, many new GUI features and a sound
+generation back-end separated from any GUI activities.
+The most outstanding new feature is the track editor which
+allows free arrangement of parts in songs and adds loop
+support to simplify song edits.
+
+More details can be found in the
+@uref{beast-doc://release-news,,NEWS section}.
+
+
 @newsTitle{Thursday 27 February 2003, LinuxForum 2003}
 
 Stefan Westerfeld and Tim Janik are going to the
