--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 FIXMES:
+- loading cmt LADSPA plugins from the cmt debian package causes beast abort:
+  BSE-ERROR **: Fatal: failed to reinitialize plugin "/usr/lib/ladspa/cmt.so": plugin types changed on disk
 - check whether bse/icons/Makefile.icons is included in dist tarball
 - check whether plugins/icons/Makefile.icons is included in dist tarball
 - check whether beast-0.5.1.orig/plugins/Makefile.plugins is included in dist tarball
