--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,11 @@
+Sun Apr 27 22:23:08 2003  Tim Janik  <timj@gtk.org>
+
+	* gslosctable.[hc]: added gsl_osc_wave_form_name(), improved debugging
+	messages.
+
+	* gsldatautils.[hc] (gsl_wave_file_dump_data): new function to write data
+	portion of a WAVE file from a float block.
+
 Sun Apr 27 02:52:31 2003  Tim Janik  <timj@gtk.org>
 
 	* bsepcmdevice-oss.c: split up debugging messages into "oss" and
